--- a/index.html
+++ b/index.html
@@ -7328,9 +7328,9 @@
         if (!situations || situations.length === 0) return alert("No hay situaciones!");
 
         const s = situations[Math.floor(Math.random() * situations.length)];
-        const order = Array.from({ length: gs.players.length }).map((_, i) => (gs.ownerIdx + i) % gs.players.length);
 
         setGs(prev => {
+          const order = Array.from({ length: (prev.players || []).length }).map((_, i) => (prev.ownerIdx + i) % prev.players.length);
           const updatedGs = {
             ...prev,
             curSit: s,
@@ -7345,10 +7345,11 @@
       };
 
       const castVote = (optIdx) => {
-        const voterIdx = gs.voterQueue[gs.currentVoterPos];
-        if (voterIdx !== playerId && gs.players[voterIdx].isHuman) return;
-
         setGs(prev => {
+          const voterIdx = prev.voterQueue[prev.currentVoterPos];
+          if (voterIdx === undefined) return prev;
+          if (voterIdx !== playerId && prev.players[voterIdx]?.isHuman) return prev;
+
           const isLastVoter = prev.currentVoterPos === prev.voterQueue.length - 1;
           const updatedGs = {
             ...prev,
@@ -7676,11 +7677,11 @@
             </div>
             <div className="glass p-6 rounded-2xl border border-white/5 text-center">
               <span className="text-[13px] text-slate-500 font-bold uppercase block mb-1">Líder OP</span>
-              <div className="text-[14px] font-black text-blue-400 bg-blue-500/10 py-2 rounded-xl border border-blue-500/20 truncate px-2">{leaderOP.name} ({leaderOP.op})</div>
+              <div className="text-[14px] font-black text-blue-400 bg-blue-500/10 py-2 rounded-xl border border-blue-500/20 truncate px-2">{leaderOP ? `${leaderOP.name} (${leaderOP.op})` : "N/A"}</div>
             </div>
             <div className="glass p-6 rounded-2xl border border-white/5 text-center">
               <span className="text-[13px] text-slate-500 font-bold uppercase block mb-1">Líder AP</span>
-              <div className="text-[14px] font-black text-emerald-400 bg-emerald-500/10 py-2 rounded-xl border border-emerald-500/20 truncate px-2">{leaderAP.name} ({leaderAP.ap})</div>
+              <div className="text-[14px] font-black text-emerald-400 bg-emerald-500/10 py-2 rounded-xl border border-emerald-500/20 truncate px-2">{leaderAP ? `${leaderAP.name} (${leaderAP.ap})` : "N/A"}</div>
             </div>
           </div>
 
@@ -7787,7 +7788,10 @@
     }
 
     function TabDashboard({ gs, nextSituation, resetGame, setTab, isHost }) {
-      const owner = gs.players[gs.ownerIdx];
+      // Safety check for gs presence
+      if (!gs) return <div className="p-20 text-center opacity-50 uppercase font-black text-xs tracking-widest">Cargando Datos...</div>;
+
+      const owner = gs.players && gs.players[gs.ownerIdx];
       // Recuperar la situación fresca de EXTERNAL_DATA para asegurar que la URL de la imagen esté actualizada
       // y no sea un dato obsoleto del localStorage
       const curSit = gs.curSit ? (EXTERNAL_DATA.SITUATIONS.find(s => s.id === gs.curSit.id) || gs.curSit) : null;
@@ -7801,10 +7805,10 @@
         <div className="animate-page space-y-8">
           {/* Indicadores Clave */}
           <div className="grid grid-cols-2 md:grid-cols-4 gap-4">
-            <KPICard label="Presupuesto" value={`$${gs.budget}M`} icon="gov" color="text-blue-400" />
-            <KPICard label="Tensión Social" value={`${gs.tension.toFixed(1)}%`} icon="stats" color={gs.tension > 5 ? "text-red-400" : "text-emerald-400"} />
-            <KPICard label="Clima Mediático" value={gs.media.toFixed(1)} icon="shake" color="text-purple-400" />
-            <KPICard label="Turno" value={`${gs.turn}/12`} icon="law" color="text-orange-400" />
+            <KPICard label="Presupuesto" value={`$${gs.budget || 0}M`} icon="gov" color="text-blue-400" />
+            <KPICard label="Tensión Social" value={`${(gs.tension || 0).toFixed(1)}%`} icon="stats" color={(gs.tension || 0) > 5 ? "text-red-400" : "text-emerald-400"} />
+            <KPICard label="Clima Mediático" value={(gs.media || 0).toFixed(1)} icon="shake" color="text-purple-400" />
+            <KPICard label="Turno" value={`${gs.turn || 1}/12`} icon="law" color="text-orange-400" />
           </div>
 
           <div className="grid grid-cols-1 lg:grid-cols-3 gap-8">
@@ -7857,7 +7861,7 @@
               ) : (
                 <div className="space-y-8">
                   <div className="space-y-2">
-                    <span className="text-blue-400 font-bold text-sm uppercase tracking-widest">Turno de Presidencia (Dueño): {owner?.name}</span>
+                    <span className="text-blue-400 font-bold text-sm uppercase tracking-widest">Turno de Presidencia (Dueño): {owner ? owner.name : "..."}</span>
                     <h2 className="text-6xl font-bold tracking-tight">Estado de la <span className="gradient-text">Unión</span></h2>
                   </div>
                   <div className="flex space-x-4">
@@ -7907,9 +7911,12 @@
     }
 
     function TabParliament({ gs, castVote, finalizeVote, closeResults, isHost, playerId, setTab, nextSituation }) {
-      const currentVoterIdx = gs.voterQueue[gs.currentVoterPos];
-      const currentVoter = gs.players[currentVoterIdx];
-      const isAllVoted = Object.keys(gs.votes).length === gs.players.length;
+      // Safety guards
+      if (!gs) return null;
+
+      const currentVoterIdx = gs.voterQueue && gs.voterQueue[gs.currentVoterPos];
+      const currentVoter = currentVoterIdx !== undefined ? gs.players[currentVoterIdx] : null;
+      const isAllVoted = gs.votes && gs.players && Object.keys(gs.votes).length === gs.players.length;
 
       if (!gs.curSit) return (
         <div className="animate-page space-y-8">
@@ -8131,7 +8138,7 @@
             <div className="flex-grow space-y-4">
               <div className="flex items-center space-x-4">
                 <span className="bg-blue-600 text-white px-4 py-1 rounded-full text-[13px] font-black uppercase tracking-[0.2em]">Moción Legislativa</span>
-                <span className="text-slate-400 font-bold text-[13px] uppercase">Turno: {gs.turn} | Resolv.: {gs.players[gs.ownerIdx].name}</span>
+                <span className="text-slate-400 font-bold text-[13px] uppercase">Turno: {gs.turn || 1} | Resolv.: {gs.players && gs.players[gs.ownerIdx] ? gs.players[gs.ownerIdx].name : "..."}</span>
               </div>
               <h2 className="text-6xl font-extrabold tracking-tighter leading-none">{gs.curSit.id}</h2>
               <p className="text-xl text-slate-300 leading-relaxed font-medium">
@@ -8145,7 +8152,7 @@
               <div className="glass p-10 rounded-[3rem] space-y-8">
                 <div className="flex justify-between items-center">
                   <h3 className="text-sm font-black uppercase tracking-[0.3em] text-slate-500">Alternativas de Recomendación</h3>
-                  {!isAllVoted && (
+                  {!isAllVoted && currentVoter && (
                     <div className="flex items-center space-x-3 bg-white/5 px-6 py-3 rounded-2xl border border-white/10">
                       <div className="w-3 h-3 rounded-full animate-pulse shadow-[0_0_12px_rgba(59,130,246,0.5)]" style={{ backgroundColor: currentVoter.color }}></div>
                       <span className="text-[13px] font-black uppercase tracking-widest text-slate-300">Turno de: <span className="text-white">{currentVoter.name}</span></span>
@@ -8155,11 +8162,11 @@
 
                 <div className="grid gap-4">
                   {gs.curSit.options.map((o, i) => {
-                    const isVotedByCurrent = gs.votes[currentVoterIdx] === i;
+                    const isVotedByCurrent = currentVoterIdx !== undefined && gs.votes[currentVoterIdx] === i;
                     return (
                       <button key={i}
-                        onClick={() => !currentVoter.isAI && castVote(i)}
-                        disabled={currentVoter.isAI || isAllVoted}
+                        onClick={() => currentVoter && !currentVoter.isAI && castVote(i)}
+                        disabled={!currentVoter || currentVoter.isAI || isAllVoted}
                         className={`p-8 rounded-[2rem] border-2 text-left transition-all relative group ${isVotedByCurrent ? 'bg-blue-600/10 border-blue-500 shadow-2xl scale-[1.02]' : 'bg-white/5 border-white/5 hover:border-white/10'}`}
                       >
                         <div className="flex justify-between items-center">
@@ -8168,8 +8175,8 @@
                             <span className="text-[13px] text-slate-500 uppercase font-bold tracking-widest">Impacto Presupuestario: <span className="text-slate-300">${o.cost}M</span></span>
                           </div>
                           <div className="flex -space-x-2">
-                            {gs.voterQueue.map(vIdx => gs.votes[vIdx] === i ? (
-                              <div key={vIdx} className="w-7 h-7 rounded-full border-2 border-[#0a0b10] shadow-xl" style={{ backgroundColor: gs.players[vIdx].color }} title={gs.players[vIdx].name}></div>
+                            {gs.voterQueue && gs.voterQueue.map(vIdx => gs.votes[vIdx] === i ? (
+                              <div key={vIdx} className="w-7 h-7 rounded-full border-2 border-[#0a0b10] shadow-xl" style={{ backgroundColor: gs.players[vIdx] ? gs.players[vIdx].color : '#ccc' }} title={gs.players[vIdx] ? gs.players[vIdx].name : ''}></div>
                             ) : null)}
                           </div>
                         </div>
