--- a/index.html
+++ b/index.html
@@ -7205,6 +7205,7 @@
         })),
         curSit: null, ownerIdx: 0,
         voterQueue: [], currentVoterPos: 0,
+        votes: {},
         negotiating: false, topOptions: [],
         showResults: false, lastResults: null,
         showElection: false, electionData: null,
@@ -7675,8 +7676,9 @@
     }
 
     function TabPlayers({ gs }) {
-      const leaderOP = [...gs.players].sort((a, b) => b.op - a.op)[0];
-      const leaderAP = [...gs.players].sort((a, b) => b.ap - a.ap)[0];
+      const players = gs?.players || [];
+      const leaderOP = [...players].sort((a, b) => (b.op || 0) - (a.op || 0))[0];
+      const leaderAP = [...players].sort((a, b) => (b.ap || 0) - (a.ap || 0))[0];
 
       return (
         <div className="animate-page space-y-8">
@@ -7758,10 +7760,10 @@
                   <Icon name="stats" className="w-4 h-4" />
                 </h3>
                 <div className="space-y-4">
-                  {Object.keys(EXTERNAL_DATA.PARTIES).map((party, idx) => {
-                    const pData = gs.players.filter(p => p.party === party);
+                  {(Object.keys(EXTERNAL_DATA.PARTIES) || []).map((party, idx) => {
+                    const pData = (gs?.players || []).filter(p => p && p.party === party);
                     if (pData.length === 0) return null;
-                    const totalAP = pData.reduce((acc, curr) => acc + curr.ap, 0);
+                    const totalAP = pData.reduce((acc, curr) => acc + (curr?.ap || 0), 0);
                     return (
                       <div key={idx} className="flex justify-between items-center bg-black/20 p-4 rounded-2xl border border-white/5">
                         <div className="space-y-1">
@@ -7785,9 +7787,9 @@
                   <Icon name="law" className="w-4 h-4" />
                 </h3>
                 <div className="space-y-3 max-h-[500px] overflow-y-auto px-2 custom-scrollbar">
-                  {gs.sectors.map((s, i) => {
-                    const totalWeight = gs.sectors.reduce((acc, curr) => acc + curr.weight, 0);
-                    const percentage = ((s.weight / totalWeight) * 100).toFixed(1);
+                  {(gs?.sectors || []).map((s, i) => {
+                    const totalWeight = (gs?.sectors || []).reduce((acc, curr) => acc + (curr?.weight || 0), 0);
+                    const percentage = totalWeight > 0 ? (((s?.weight || 0) / totalWeight) * 100).toFixed(1) : 0;
                     return (
                       <div key={i} className="flex justify-between items-center text-[13px] group py-1 border-b border-white/5 last:border-0">
                         <span className="text-slate-400 group-hover:text-white transition-colors capitalize w-1/3 truncate" title={s.name}>{s.name}</span>
@@ -7902,11 +7904,11 @@
             <div className="glass rounded-[2.5rem] p-8 space-y-6 flex flex-col h-full">
               <h3 className="text-sm font-bold text-slate-500 uppercase tracking-widest">Sectores Sociales</h3>
               <div className="space-y-4 overflow-y-auto px-2 custom-scrollbar flex-grow">
-                {gs.sectors.map((s, i) => (
+                {(gs?.sectors || []).map((s, i) => (
                   <div key={i} className="space-y-1">
-                    <div className="flex justify-between text-[13px] font-bold uppercase"><span>{s.name}</span><span className={s.value > 500 ? "text-emerald-400" : "text-red-400"}>{s.value}</span></div>
+                    <div className="flex justify-between text-[13px] font-bold uppercase"><span>{s?.name}</span><span className={(s?.value || 0) > 500 ? "text-emerald-400" : "text-red-400"}>{s?.value}</span></div>
                     <div className="w-full bg-slate-800 h-1 rounded-full overflow-hidden">
-                      <div className={`h-full ${s.value > 500 ? "bg-emerald-500" : "bg-red-500"}`} style={{ width: `${s.value / 10}%` }}></div>
+                      <div className={`h-full ${(s?.value || 0) > 500 ? "bg-emerald-500" : "bg-red-500"}`} style={{ width: `${(s?.value || 0) / 10}%` }}></div>
                     </div>
                   </div>
                 ))}
@@ -7915,13 +7917,13 @@
           </div>
 
           <div className="grid grid-cols-1 md:grid-cols-5 gap-6">
-            {gs.players.map((p, i) => (
-              <div key={i} className={`glass p-6 rounded-3xl border-t-[6px] transition-all relative ${gs.ownerIdx === i ? 'neon-blue scale-105 z-10' : 'opacity-80'}`} style={{ borderTopColor: p.color }}>
+            {(gs?.players || []).map((p, i) => (
+              <div key={i} className={`glass p-6 rounded-3xl border-t-[6px] transition-all relative ${gs.ownerIdx === i ? 'neon-blue scale-105 z-10' : 'opacity-80'}`} style={{ borderTopColor: p?.color }}>
                 {gs.ownerIdx === i && <div className="absolute -top-3 left-1/2 -translate-x-1/2 bg-blue-600 text-[10px] font-black px-3 py-1 rounded-full text-white uppercase tracking-tighter">Presidente</div>}
-                <span className="text-[13px] text-slate-500 font-bold block mb-1">{p.party}</span>
-                <h4 className="font-bold text-xl mb-2">{p.name}</h4>
-                <div className="flex justify-between text-[13px] mb-1"><span>Escaños</span><span className="text-blue-400 font-bold">{p.seats}</span></div>
-                <div className="flex justify-between text-[13px] text-slate-500 font-bold"><span>Lealtad</span><span>{p.loyalty.toFixed(0)}%</span></div>
+                <span className="text-[13px] text-slate-500 font-bold block mb-1">{p?.party}</span>
+                <h4 className="font-bold text-xl mb-2">{p?.name}</h4>
+                <div className="flex justify-between text-[13px] mb-1"><span>Escaños</span><span className="text-blue-400 font-bold">{p?.seats}</span></div>
+                <div className="flex justify-between text-[13px] text-slate-500 font-bold"><span>Lealtad</span><span>{p?.loyalty ? p.loyalty.toFixed(0) : 0}%</span></div>
               </div>
             ))}
           </div>
@@ -7933,9 +7935,9 @@
       // Safety guards
       if (!gs) return null;
 
-      const currentVoterIdx = gs.voterQueue && gs.voterQueue[gs.currentVoterPos];
-      const currentVoter = (currentVoterIdx !== undefined && gs.players) ? gs.players[currentVoterIdx] : null;
-      const isAllVoted = gs.votes && gs.players && Object.keys(gs.votes).length === gs.players.length;
+      const currentVoterIdx = gs?.voterQueue?.[gs.currentVoterPos];
+      const currentVoter = (currentVoterIdx !== undefined && gs?.players) ? gs.players[currentVoterIdx] : null;
+      const isAllVoted = gs?.votes && gs?.players && Object.keys(gs.votes).length === gs.players.length;
 
       if (!gs.curSit) return (
         <div className="animate-page space-y-8">
@@ -7986,7 +7988,7 @@
                     <Icon name="stats" className="w-8 h-8 text-blue-400" />
                   </div>
                   <h2 className="text-5xl font-extrabold tracking-tight uppercase">
-                    {gs.lastResults.needsNegotiation ?
+                    {gs.lastResults?.needsNegotiation ?
                       <>Consenso <span className="text-orange-500">Insuficiente</span></> :
                       <>Resumen de <span className="text-blue-500">Votación</span></>}
                   </h2>
@@ -8008,14 +8010,14 @@
                         </tr>
                       </thead>
                       <tbody>
-                        {gs.lastResults.recommendations.map((r, i) => (
+                        {(gs.lastResults?.recommendations || []).map((r, i) => (
                           <tr key={i} className="border-b border-white/5">
                             <td className="px-6 py-3 text-slate-500 font-mono">{i + 1}</td>
-                            <td className="px-6 py-3 font-bold text-white">{r.name}</td>
-                            <td className="px-6 py-3 text-center font-mono">{r.seats}</td>
-                            <td className="px-6 py-3 text-blue-400 font-bold">{r.recText}</td>
-                            <td className="px-6 py-3 text-center text-emerald-400 font-mono">{r.loyalty}%</td>
-                            <td className="px-6 py-3 text-center text-red-500 font-mono">{r.disloyalty}%</td>
+                            <td className="px-6 py-3 font-bold text-white">{r?.name}</td>
+                            <td className="px-6 py-3 text-center font-mono">{r?.seats}</td>
+                            <td className="px-6 py-3 text-blue-400 font-bold">{r?.recText}</td>
+                            <td className="px-6 py-3 text-center text-emerald-400 font-mono">{r?.loyalty}%</td>
+                            <td className="px-6 py-3 text-center text-red-500 font-mono">{r?.disloyalty}%</td>
                           </tr>
                         ))}
                       </tbody>
@@ -8037,26 +8039,26 @@
                         </tr>
                       </thead>
                       <tbody className="font-mono">
-                        {gs.lastResults.voterDetails.map((det, i) => (
+                        {(gs.lastResults?.voterDetails || []).map((det, i) => (
                           <tr key={i} className="border-b border-white/5">
-                            <td className="px-8 py-3 text-slate-300 font-bold font-sans">{det.name}</td>
-                            <td className="px-4 py-3 text-center text-slate-500">{gs.lastResults.recommendations[i].seats}</td>
-                            {det.distribution.map((v, j) => (
+                            <td className="px-8 py-3 text-slate-300 font-bold font-sans">{det?.name}</td>
+                            <td className="px-4 py-3 text-center text-slate-500">{gs.lastResults?.recommendations?.[i]?.seats}</td>
+                            {(det?.distribution || []).map((v, j) => (
                               <td key={j} className={`text-center ${v > 0 ? "text-blue-400 font-bold" : "text-slate-800"}`}>{v}</td>
                             ))}
-                            <td className="px-8 py-3 text-right text-slate-400">{det.distribution.reduce((a, b) => a + b, 0)}</td>
+                            <td className="px-8 py-3 text-right text-slate-400">{(det?.distribution || []).reduce((a, b) => a + b, 0)}</td>
                           </tr>
                         ))}
                       </tbody>
                       <tfoot className="bg-white/5 text-white font-bold">
                         <tr className="border-t border-white/20">
                           <td className="px-8 py-3 uppercase text-[12px] font-black tracking-widest text-slate-500 font-sans">TOTAL</td>
-                          <td className="px-4 py-3 text-center">{gs.players.reduce((sum, p) => sum + p.seats, 0)}</td>
-                          {gs.curSit.options.map((_, j) => {
-                            const total = gs.lastResults.voterDetails.reduce((sum, det) => sum + det.distribution[j], 0);
+                          <td className="px-4 py-3 text-center">{(gs.players || []).reduce((sum, p) => sum + (p?.seats || 0), 0)}</td>
+                          {(gs.curSit?.options || []).map((_, j) => {
+                            const total = (gs.lastResults?.voterDetails || []).reduce((sum, det) => sum + (det?.distribution?.[j] || 0), 0);
                             return <td key={j} className="text-center text-emerald-400">{total}</td>;
                           })}
-                          <td className="px-8 py-3 text-right">{gs.players.reduce((sum, p) => sum + p.seats, 0)}</td>
+                          <td className="px-8 py-3 text-right">{(gs.players || []).reduce((sum, p) => sum + (p?.seats || 0), 0)}</td>
                         </tr>
                       </tfoot>
                     </table>
@@ -8079,13 +8081,13 @@
                     </h4>
                     <div className="space-y-1">
                       <p className="text-[13px] font-black text-slate-500 uppercase tracking-widest mb-2">Ranking opciones (bancas):</p>
-                      {gs.lastResults.ranking.map((rank, i) => {
-                        const totalSeats = gs.players.reduce((sum, p) => sum + p.seats, 0);
-                        const pct = ((rank.seats / totalSeats) * 100).toFixed(1);
+                      {(gs.lastResults?.ranking || []).map((rank, i) => {
+                        const totalSeats = (gs.players || []).reduce((sum, p) => sum + (p?.seats || 0), 0);
+                        const pct = totalSeats > 0 ? ((rank.seats / totalSeats) * 100).toFixed(1) : 0;
                         return (
                           <div key={i} className="text-sm text-slate-300 flex justify-between max-w-sm">
                             <span className="truncate pr-4"><span className="text-blue-400 font-bold">Opción {rank.optIdx + 1}:</span> {rank.text}</span>
-                            <span className={`font-bold ${i === 0 ? (gs.lastResults.needsNegotiation ? 'text-orange-400' : 'text-blue-400') : 'text-slate-500'}`}>
+                            <span className={`font-bold ${i === 0 ? (gs.lastResults?.needsNegotiation ? 'text-orange-400' : 'text-blue-400') : 'text-slate-500'}`}>
                               {rank.seats} votos ({pct}%)
                             </span>
                           </div>
@@ -8094,9 +8096,9 @@
                     </div>
                   </div>
                   <div className="self-end">
-                    {gs.lastResults.needsNegotiation ? (
+                    {gs.lastResults?.needsNegotiation ? (
                       <div className="bg-orange-500/20 text-orange-400 px-4 py-2 rounded-xl text-[13px] font-black uppercase tracking-widest border border-orange-500/30 animate-pulse">Negociación Requerida</div>
-                    ) : gs.lastResults.isDecree ? (
+                    ) : gs.lastResults?.isDecree ? (
                       <div className="bg-red-500/20 text-red-400 px-4 py-2 rounded-xl text-[13px] font-black uppercase tracking-widest border border-red-500/30">Decreto Presidencial</div>
                     ) : (
                       <div className="bg-emerald-500/20 text-emerald-400 px-4 py-2 rounded-xl text-[13px] font-black uppercase tracking-widest border border-emerald-500/30">Voto Mayoritario</div>
@@ -8104,7 +8106,7 @@
                   </div>
                 </div>
 
-                {gs.lastResults.needsNegotiation ? (
+                {gs.lastResults?.needsNegotiation ? (
                   gs.attemptedNegotiation ? (
                     <div className="space-y-4 w-full">
                       <div className="bg-red-500/10 border border-red-500/20 p-8 rounded-[2.5rem] text-center space-y-4">
@@ -8113,13 +8115,13 @@
                           <span className="text-sm font-black uppercase tracking-[0.2em]">Atribuciones Especiales Requeridas</span>
                         </div>
                         <p className="text-slate-400 text-sm max-w-lg mx-auto leading-relaxed">
-                          {gs.players[gs.ownerIdx].isAI ?
-                            <>El Presidente <span className="text-white font-bold underline decoration-blue-500/50">{gs.players[gs.ownerIdx].name}</span> está ejerciendo sus facultades excepcionales para zanjar el bloqueo legislativo.</> :
+                          {gs.players?.[gs.ownerIdx]?.isAI ?
+                            <>El Presidente <span className="text-white font-bold underline decoration-blue-500/50">{gs.players[gs.ownerIdx]?.name}</span> está ejerciendo sus facultades excepcionales para zanjar el bloqueo legislativo.</> :
                             <>El Palacio no ha logrado el consenso tras las negociaciones. Como <span className="text-white font-bold">Presidente</span>, debes zanjar la parálisis legislativa por Decreto.</>}
                         </p>
                         <div className="grid grid-cols-1 md:grid-cols-2 gap-4 pt-2">
-                          {gs.lastResults.ranking.slice(0, 2).map((rank, i) => {
-                            const isAiOwner = gs.players[gs.ownerIdx].isAI;
+                          {(gs.lastResults?.ranking || []).slice(0, 2).map((rank, i) => {
+                            const isAiOwner = gs.players?.[gs.ownerIdx]?.isAI;
                             return (
                               <button key={i}
                                 disabled={isAiOwner}
@@ -8137,7 +8139,7 @@
                     <button onClick={() => setGs(p => ({ ...p, showResults: false, negotiating: true }))} className="w-full bg-orange-600 hover:bg-orange-500 text-white font-bold py-6 rounded-3xl shadow-xl transition-all uppercase text-sm tracking-widest animate-pulse">Abrir Mesa de Negociación</button>
                   )
                 ) : (
-                  <button onClick={closeResults} className="w-full bg-blue-600 hover:bg-blue-500 text-white font-bold py-6 rounded-3xl shadow-xl transition-all uppercase text-sm tracking-widest">Finalizar Turno y Avanzar</button>
+                  <button onClick={closeResults} className="w-full bg-blue-600 hover:bg-blue-500 text-white font-black py-6 rounded-3xl shadow-xl shadow-blue-900/40 transition-all uppercase text-sm tracking-widest active:scale-95">Finalizar Turno y Avanzar</button>
                 )}
               </div>
             </div>
@@ -8181,7 +8183,7 @@
 
                 <div className="grid gap-4">
                   {gs.curSit.options.map((o, i) => {
-                    const isVotedByCurrent = currentVoterIdx !== undefined && gs.votes[currentVoterIdx] === i;
+                    const isVotedByCurrent = currentVoterIdx !== undefined && gs?.votes?.[currentVoterIdx] === i;
                     return (
                       <button key={i}
                         onClick={() => currentVoter && !currentVoter.isAI && castVote(i)}
@@ -8190,12 +8192,12 @@
                       >
                         <div className="flex justify-between items-center">
                           <div className="space-y-2">
-                            <span className="text-2xl font-bold block group-hover:text-blue-400 transition-colors tracking-tight">{o.text}</span>
-                            <span className="text-[13px] text-slate-500 uppercase font-bold tracking-widest">Impacto Presupuestario: <span className="text-slate-300">${o.cost}M</span></span>
+                            <span className="text-2xl font-bold block group-hover:text-blue-400 transition-colors tracking-tight">{o?.text}</span>
+                            <span className="text-[13px] text-slate-500 uppercase font-bold tracking-widest">Impacto Presupuestario: <span className="text-slate-300">${o?.cost}M</span></span>
                           </div>
                           <div className="flex -space-x-2">
-                            {gs.voterQueue && gs.voterQueue.map(vIdx => gs.votes && gs.votes[vIdx] === i ? (
-                              <div key={vIdx} className="w-7 h-7 rounded-full border-2 border-[#0a0b10] shadow-xl" style={{ backgroundColor: gs.players && gs.players[vIdx] ? gs.players[vIdx].color : '#ccc' }} title={gs.players && gs.players[vIdx] ? gs.players[vIdx].name : ''}></div>
+                            {(gs?.voterQueue || []).map(vIdx => (gs?.votes && gs?.votes[vIdx] === i) ? (
+                              <div key={vIdx} className="w-7 h-7 rounded-full border-2 border-[#0a0b10] shadow-xl" style={{ backgroundColor: (gs?.players && gs?.players[vIdx]) ? gs?.players[vIdx]?.color : '#ccc' }} title={(gs?.players && gs?.players[vIdx]) ? gs?.players[vIdx]?.name : ''}></div>
                             ) : null)}
                           </div>
                         </div>
